--- a/index.html
+++ b/index.html
@@ -181,8 +181,9 @@
   <div id="loader" class="content">
     <h2>Loader</h2>
     <div class="loader-buttons">
-      <a href="https://cdn.discordapp.com/attachments/1348049795209625600/1357740553017626634/spoofer_one_click.exe?ex=67f29f6d&is=67f14ded&hm=5081b257e4c54795b27b20f28f21b3adba220c3a29de36c10205ab7c59ebfd94&" class="button" download>Télécharger Spoofer One Click</a>
-      <a href="https://cdn.discordapp.com/attachments/1348049795209625600/1357739262736470026/loader.exe?ex=67f29e39&is=67f14cb9&hm=c6dfb05ee5ed668089f7a1d2a168cddbeb49de3a5be6cb164258031e94ae9f47&" class="button" download>Télécharger External Chair Bo6</a>
+      <a href="https://cdn.discordapp.com/attachments/1348049795209625600/1357740553017626634/spoofer_one_click.exe?ex=67f7e56d&is=67f693ed&hm=37a6670004767f1060b49cefce00616276e63f01c4e9820abe545d45b9270adc&" class="button" download>Télécharger Spoofer One Click</a>
+      <a href="https://cdn.discordapp.com/attachments/1348049795209625600/1357739262736470026/loader.exe?ex=67f7e439&is=67f692b9&hm=cc818e2bbc41304bcf1544ab728c263d711c0872455a3e2eb1555e4b641167cf&" class="button" download>Télécharger External Chair Bo6</a>
+<a href="https://gofile.io/d/buO6gE" class="button" download>Télécharger fortnite external</a>
     </div>
   </div>
 
