--- a/index.html
+++ b/index.html
@@ -181,9 +181,9 @@
   <div id="loader" class="content">
     <h2>Loader</h2>
     <div class="loader-buttons">
-      <a href="https://cdn.discordapp.com/attachments/1348049795209625600/1357740553017626634/spoofer_one_click.exe?ex=67f7e56d&is=67f693ed&hm=37a6670004767f1060b49cefce00616276e63f01c4e9820abe545d45b9270adc&" class="button" download>Télécharger Spoofer One Click</a>
-      <a href="https://cdn.discordapp.com/attachments/1299655360264540171/1360315074593554682/KMLKU.exe?ex=67faaba3&is=67f95a23&hm=83a2ddaf51e4e980c72e101e1245b47303332b6e76d5c6245bc376553dec9506&" class="button" download>Télécharger External / UnlockAll Bo6</a>
-<a href="https://gofile.io/d/buO6gE" class="button" download>Télécharger fortnite external</a>
+      <a href="https://cdn.discordapp.com/attachments/1348049795209625600/1357740553017626634/spoofer_one_click.exe?ex=67f7e56d&is=67f693ed&hm=37a6670004767f1060b49cefce00616276e63f01c4e9820abe545d45b9270adc&" class="button" download>loader Spoofer One Click</a>
+      <a href="https://cdn.discordapp.com/attachments/1299655360264540171/1360315074593554682/KMLKU.exe?ex=67faaba3&is=67f95a23&hm=83a2ddaf51e4e980c72e101e1245b47303332b6e76d5c6245bc376553dec9506&" class="button" download>loader External / UnlockAll Bo6</a>
+<a href="https://gofile.io/d/buO6gE" class="button" download>loader fortnite external</a>
     </div>
   </div>
 
