--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
   <div id="shop" class="content">
     <h2>Boutique 24h/7j</h2>
     <p>Si xzylow n’est pas présent dans les tickets, le site reste à votre disposition !</p>
-    <a href="https://xzylowmarket.mysellauth.com/" class="button" target="_blank">Accéder à la boutique</a>
+    <a href="https://xzylow.mysellauth.com/" class="button" target="_blank">Accéder à la boutique</a>
   </div>
 
   <div id="loader" class="content">
